# MCP-server-for-notes

./: README.md  main.py  pyproject.toml
src/mcp_server_notes/: __init__.py  config.py  mcp_instance.py  models.py  prompts.py  resources.py  server.py  tools.py
